<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="win.lihy.game2048.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvHighScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/restart" />

        <Space
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="#ffedc22e"
            android:gravity="center"
            android:text="@string/voice_recognize"
            android:textColor="#ff000000" />

        <ToggleButton
            android:id="@+id/toggleBtnRecognize"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:textOff="@string/voice_recognize_off"
            android:textOn="@string/voice_recognize_on" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/gameContainer"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <win.lihy.game2048.GameView
            android:id="@+id/gameView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </win.lihy.game2048.GameView>

        <win.lihy.game2048.MyAnimation
            android:id="@+id/myAnimation"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </win.lihy.game2048.MyAnimation>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e0000000"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/linkWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_wanfashuoming"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <Space android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/author_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>