<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/index" />

   <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnStart"
                style="@style/welcome_button_style"
                android:text="@string/startGame" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/btnHighScore"
                style="@style/welcome_button_style"
                android:text="@string/str_HighScore" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/btnAbout"
                style="@style/welcome_button_style"
                android:text="@string/str_aboutGame" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/btnQuit"
                style="@style/welcome_button_style"
                android:text="@string/str_quit" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_page_below_str"
                android:textAppearance="?android:attr/textAppearanceSmallInverse" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>